# Elastic-Guardian

./: .gitignore  PROJECT_PLAN.md  README.md  elastic_guardian_init.py  install.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  version.py
elastic_guardian/: __init__.py
elastic_guardian/core/: __init__.py
elastic_guardian/distributed/: __init__.py
elastic_guardian/export/: __init__.py
elastic_guardian/hardware/: __init__.py
elastic_guardian/memory/: __init__.py
elastic_guardian/plugins/: __init__.py
